# valley

./: .gitignore  NOTICE  README.md  VALLEY.md  index.html  package.json  pnpm-lock.yaml  settings.html  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
docs/design/: README.md
docs/design/chats/: chat1.md
docs/design/project/: README.md  SKILL.md  colors_and_type.css  tokens.json
docs/qa/: smoke.md
docs/superpowers/plans/: 2026-05-09-valley-v0.1-mvp.md
docs/superpowers/specs/: 2026-05-09-valley-v0.1-mvp-design.md
scripts/: build-icons.sh  check-bundle-size.mjs
src/: App.tsx  main.tsx  settings-entry.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: mod.rs  secrets.rs  shell.rs
src-tauri/src/modules/fs/: file.rs  grep.rs  mod.rs  mutate.rs  search.rs  tree.rs
src-tauri/src/modules/git/: mod.rs
src-tauri/src/modules/pty/: mod.rs  session.rs  shell_init.rs
src-tauri/src/modules/pty/scripts/: bashrc.bash  zlogin.zsh  zprofile.zsh  zshenv.zsh  zshrc.zsh
src-tauri/src/modules/ssh/: config.rs  mod.rs
src/components/: Btn.tsx  Dot.tsx  Icon.tsx  Kbd.tsx
src/lib/: host.ts  layout.ts  native.ts  screen.ts  settings.ts  workspace.ts
src/modules/ai/: AiPanel.tsx  Omnibar.tsx  ToolCallCard.tsx  config.ts
src/modules/decode/: DecodePanel.tsx  (+1 more)
src/styles/: app.css  components.css  index.css  reset.css  tokens.css
vite-plugins/: valley-self-save.ts
(+102 files in other folders)
