[package]
name = "valley"
version = "0.4.6"
description = "Valley — a lightweight, AI-aware desktop terminal for macOS"
authors = ["frederickjerusha"]
edition = "2021"

[lib]
name = "valley_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
portable-pty = "0.9"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
ignore = "0.4"
globset = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
# SSH/SFTP client for the remote sidebar — pure-Rust, async, agent-friendly.
russh = "0.50"
russh-sftp = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net", "io-util", "fs"] }
async-trait = "0.1"
home = "0.5"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6", default-features = false, features = ["apple-native"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"
panic = "abort"
strip = true
